[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.11.4",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.21",
    "langchain-google-genai>=4.2.1",
    "langchain-mistralai>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "uvicorn>=0.42.0",
]
